<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreerCompteActivity">


  <TextView
      android:id="@+id/cr_ez_un_co"
      android:layout_width="395dp"
      android:layout_height="34dp"
      android:layout_alignParentLeft="true"
      android:layout_alignParentTop="true"
      android:layout_marginTop="8dp"
      android:gravity="center"
      android:text="@string/cr_ez_un_co"
      android:textColor="#000000"
      android:textSize="13sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="1.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <!-- Nom prénom -->
  <TextView
      android:id="@+id/nom_et_pr_n"
      android:layout_width="0dp"
      android:layout_height="13dp"
      android:layout_alignParentLeft="true"
      android:layout_alignParentTop="true"
      android:layout_marginStart="30dp"
      android:layout_marginTop="16dp"
      android:gravity="top"

      android:text="@string/nom_et_pr_n"
      android:textSize="13sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/cr_ez_un_co" />

  <View
      android:id="@+id/rectangle_7"
      android:layout_width="354dp"
      android:layout_height="36dp"
      android:layout_alignParentLeft="true"
      android:layout_alignParentTop="true"
      android:layout_marginTop="8dp"
      android:width="354dp"
      android:height="36dp"
      android:background="@drawable/rectangle_7"
      android:viewportWidth="354"
      android:viewportHeight="36"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.491"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/nom_et_pr_n" />

  <TextView
      android:id="@+id/nom_et_pr_nTExt"
      android:layout_width="0dp"
      android:layout_height="13dp"
      android:layout_alignParentLeft="true"
      android:layout_alignParentTop="true"
      android:layout_marginStart="16dp"
      android:gravity="top"
      android:text="@string/nom_et_pr_n"
      android:textAppearance="@string/nom_et_pr_n"
      android:textColor="#66000000"
      android:textSize="11sp"
      app:layout_constraintBottom_toBottomOf="@+id/rectangle_7"
      app:layout_constraintEnd_toEndOf="@+id/rectangle_7"
      app:layout_constraintStart_toStartOf="@+id/rectangle_7"
      app:layout_constraintTop_toBottomOf="@+id/nom_et_pr_n" />

  <!-- Adresse mail -->

  <TextView
      android:id="@+id/adresseMail"
      android:layout_width="0dp"
      android:layout_height="13dp"
      android:layout_alignParentLeft="true"
      android:layout_alignParentTop="true"
      android:layout_marginStart="30dp"
      android:layout_marginTop="8dp"

      android:gravity="top"
      android:text="@string/adresseMail"
      android:textSize="13sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/rectangle_7" />

  <View
      android:id="@+id/rectangle_7adresseMail"
      android:layout_width="354dp"
      android:layout_height="36dp"
      android:layout_alignParentLeft="true"
      android:layout_alignParentTop="true"
      android:layout_marginTop="8dp"
      android:width="354dp"
      android:height="36dp"
      android:background="@drawable/rectangle_7"
      android:viewportWidth="354"
      android:viewportHeight="36"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.491"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/adresseMail" />

  <TextView
      android:id="@+id/nom_et_pr_nTExtadresseMail"
      android:layout_width="0dp"
      android:layout_height="13dp"
      android:layout_alignParentLeft="true"
      android:layout_alignParentTop="true"
      android:layout_marginStart="16dp"
      android:gravity="top"
      android:text="@string/adresseMail"
      android:textAppearance="@string/adresseMail"
      android:textColor="#66000000"
      android:textSize="11sp"
      app:layout_constraintBottom_toBottomOf="@+id/rectangle_7adresseMail"
      app:layout_constraintEnd_toEndOf="@+id/rectangle_7adresseMail"
      app:layout_constraintStart_toStartOf="@+id/rectangle_7adresseMail"
      app:layout_constraintTop_toTopOf="@+id/rectangle_7adresseMail" />

  <!-- Numéro de téléphone -->

  <TextView
      android:id="@+id/Numero"
      android:layout_width="0dp"
      android:layout_height="13dp"
      android:layout_alignParentLeft="true"
      android:layout_alignParentTop="true"

      android:layout_marginStart="30dp"
      android:layout_marginTop="8dp"
      android:gravity="top"
      android:text="@string/numero"
      android:textSize="13sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/rectangle_7adresseMail" />

  <View
      android:id="@+id/rectangle_7Numero"
      android:layout_width="354dp"
      android:layout_height="36dp"
      android:layout_marginTop="8dp"
      android:width="354dp"
      android:height="36dp"
      android:background="@drawable/rectangle_7"
      android:viewportWidth="354"
      android:viewportHeight="36"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.526"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/Numero" />

  <TextView
      android:id="@+id/nom_et_pr_nTExtNumero"
      android:layout_width="0dp"
      android:layout_height="13dp"
      android:layout_marginStart="16dp"
      android:gravity="top"
      android:text="@string/numero"
      android:textAppearance="@style/Numero"
      android:textColor="#66000000"
      android:textSize="11sp"
      app:layout_constraintBottom_toBottomOf="@+id/rectangle_7Numero"
      app:layout_constraintEnd_toEndOf="@+id/rectangle_7Numero"
      app:layout_constraintStart_toStartOf="@+id/rectangle_7Numero"
      app:layout_constraintTop_toTopOf="@+id/rectangle_7Numero" />

  <!-- Mot de passe -->

  <TextView
      android:id="@+id/MotDePasse"
      android:layout_width="0dp"
      android:layout_height="13dp"

      android:layout_marginStart="30dp"
      android:layout_marginTop="8dp"
      android:gravity="top"
      android:text="@string/MotDePasse"
      android:textSize="13sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/rectangle_7Numero" />

  <View
      android:id="@+id/rectangle_7MotDePasse"
      android:layout_width="354dp"
      android:layout_height="36dp"
      android:layout_marginTop="8dp"
      android:width="354dp"
      android:height="36dp"
      android:background="@drawable/rectangle_7"
      android:viewportWidth="354"
      android:viewportHeight="36"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/MotDePasse" />

  <TextView
      android:id="@+id/nom_et_pr_nTExtMotDePasse"
      android:layout_width="0dp"
      android:layout_height="13dp"
      android:layout_marginStart="8dp"
      android:gravity="top"
      android:text="@string/MotDePasse"
      android:textAppearance="@style/Numero"
      android:textColor="#66000000"
      android:textSize="11sp"
      app:layout_constraintBottom_toBottomOf="@+id/rectangle_7MotDePasse"
      app:layout_constraintEnd_toEndOf="@+id/rectangle_7MotDePasse"
      app:layout_constraintStart_toStartOf="@+id/rectangle_7MotDePasse"
      app:layout_constraintTop_toTopOf="@+id/rectangle_7MotDePasse" />

  <!-- Répéter le mot de passe -->

  <TextView
      android:id="@+id/Répéterlemotdepasse"
      android:layout_width="0dp"
      android:layout_height="13dp"
      android:layout_marginStart="30dp"
      android:layout_marginTop="8dp"
      android:gravity="top"
      android:text="@string/Répéterlemotdepasse"
      android:textSize="13sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/rectangle_7MotDePasse" />

  <View
      android:id="@+id/rectangle_7Répéterlemotdepasse"
      android:layout_width="354dp"
      android:layout_height="36dp"
      android:layout_marginTop="8dp"
      android:width="354dp"
      android:height="36dp"
      android:background="@drawable/rectangle_7"
      android:viewportWidth="354"
      android:viewportHeight="36"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/Répéterlemotdepasse" />

  <TextView
      android:id="@+id/nom_et_pr_nTExtRépéterlemotdepasse"
      android:layout_width="0dp"
      android:layout_height="13dp"
      android:layout_marginStart="8dp"
      android:gravity="top"
      android:text="@string/Répéterlemotdepasse"
      android:textAppearance="@style/Répéterlemotdepasse"
      android:textColor="#66000000"
      android:textSize="11sp"
      app:layout_constraintBottom_toBottomOf="@+id/rectangle_7Répéterlemotdepasse"
      app:layout_constraintEnd_toEndOf="@+id/rectangle_7Répéterlemotdepasse"
      app:layout_constraintStart_toStartOf="@+id/rectangle_7Répéterlemotdepasse"
      app:layout_constraintTop_toTopOf="@+id/rectangle_7Répéterlemotdepasse" />

  <!-- Comment avez-vous entendu parler de nous ? -->

  <TextView
      android:id="@+id/Comment"
      android:layout_width="0dp"
      android:layout_height="13dp"
      android:layout_marginStart="30dp"
      android:layout_marginTop="8dp"
      android:gravity="top"
      android:text="@string/Comment"
      android:textSize="13sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/rectangle_7Répéterlemotdepasse" />

  <View
      android:id="@+id/rectangle_7Comment"
      android:layout_width="354dp"
      android:layout_height="36dp"
      android:layout_marginTop="8dp"
      android:width="354dp"
      android:height="36dp"
      android:background="@drawable/rectangle_7"
      android:viewportWidth="354"
      android:viewportHeight="36"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/Comment" />

  <TextView
      android:id="@+id/nom_et_pr_nTExtComment"
      android:layout_width="0dp"
      android:layout_height="13dp"
      android:layout_marginStart="8dp"
      android:gravity="top"
      android:text="@string/Comment"
      android:textAppearance="@style/Répéterlemotdepasse"
      android:textColor="#66000000"
      android:textSize="11sp"
      app:layout_constraintBottom_toBottomOf="@+id/rectangle_7Comment"
      app:layout_constraintEnd_toEndOf="@+id/rectangle_7Comment"
      app:layout_constraintStart_toStartOf="@+id/rectangle_7Comment"
      app:layout_constraintTop_toBottomOf="@+id/Comment" />

  <!-- Créer un compte -->
  <View
      android:id="@+id/rectangle_4"
      android:layout_width="309dp"
      android:layout_height="44dp"
      android:layout_alignParentLeft="true"
      android:layout_alignParentTop="true"
      android:layout_marginTop="24dp"
      android:width="171dp"
      android:height="50dp"
      android:background="@drawable/rectangle_4"
      android:onClick="launchAceuilPage"
      android:viewportWidth="171"
      android:viewportHeight="50"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/rectangle_7Comment" />

  <TextView
      android:id="@+id/connexionText"
      android:layout_width="200dp"
      android:layout_height="22dp"
      android:layout_alignParentLeft="true"
      android:layout_alignParentTop="true"
      android:gravity="center"
      android:text="@string/creer"
      android:textAppearance="@style/connexion"
      android:textColor="#F7F7F7"
      android:textSize="16sp"
      app:layout_constraintBottom_toBottomOf="@+id/rectangle_4"
      app:layout_constraintEnd_toEndOf="@+id/rectangle_4"
      app:layout_constraintStart_toStartOf="@+id/rectangle_4"
      app:layout_constraintTop_toTopOf="@+id/rectangle_4" />

  <TextView
      android:id="@+id/vous_avez_d"
      android:layout_width="312dp"
      android:layout_height="17dp"
      android:layout_alignParentLeft="true"
      android:layout_alignParentTop="true"
      android:layout_marginTop="16dp"
      android:gravity="center_horizontal|top"
      android:text="@string/vous_avez_d"
      android:textColor="#000000"

      android:textSize="12sp"
      android:textStyle="bold"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/rectangle_4" />

  <!-- se connecter -->

  <View
      android:id="@+id/rectangle_5"
      android:layout_width="171dp"
      android:layout_height="50dp"
      android:layout_alignParentLeft="true"
      android:layout_alignParentTop="true"
      android:layout_marginTop="24dp"
      android:width="171dp"
      android:height="50dp"
      android:background="@drawable/rectangle_5"
      android:viewportWidth="171"
      android:viewportHeight="50"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/vous_avez_d" />

  <TextView
      android:id="@+id/connecterText"
      android:layout_width="135dp"
      android:layout_height="24dp"
      android:layout_alignParentLeft="true"
      android:layout_alignParentTop="true"
      android:gravity="center"
      android:text="@string/connecter"
      android:textColor="#000000"
      android:textSize="18sp"
      app:layout_constraintBottom_toBottomOf="@+id/rectangle_5"
      app:layout_constraintEnd_toEndOf="@+id/rectangle_5"
      app:layout_constraintStart_toStartOf="@+id/rectangle_5"
      app:layout_constraintTop_toTopOf="@+id/rectangle_5"
      android:onClick="lunchLogin"/>

</androidx.constraintlayout.widget.ConstraintLayout>